[project]
name = "flatiron"
version = "0.14.1"
description = "A library of computer vision models and a streamlined framework for training them."
authors = [
    { name = "Alex Braun", email = "alexander.g.braun@gmail.com" },
]
readme = "README.md"
license = "MIT"
keywords = [
    "unet",
    "tensorflow",
    "artificial intelligence",
    "artificial-intelligence",
    "cnn",
    "computer vision",
    "computer-vision",
    "deep learning",
    "deep-learning",
    "machine learning",
    "machine-learning",
    "ml ops",
    "ml-ops",
    "mlops",
    "neural network",
    "neural-network",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "humanfriendly",
    "lunchbox>=0.3.3",
    "numpy",
    "pandas",
    "pytz>=2022.7.1",
    "pyyaml>=6.0",
    "schematics>=2.1.1",
    "scikit-learn>=1.2.1",
    "tensorboard>=2.0.0",
    "tqdm>=4.64.1",
]

[project.urls]
repository = "https://github.com/thenewflesh/flatiron"
documentation = "https://thenewflesh.github.io/flatiron"

[project.scripts]
flatiron = "flatiron.command:main"

[project.optional-dependencies]

[tool.pdm.dev-dependencies]
lab = [
    "cufflinks",
    "jupyterlab-git>=0.39.3",
    "jupyterlab-henanigans>=0.2.2",
    "jupyterlab-sublime",
    "jupyterlab",
]
dev = [
    "sphinx-autodoc-typehints>=1.22",
    "sphinx-rtd-theme",
    "sphinx>=5.3.0",
    "toml>=0.10.2",
]
test = [
    "flake8",
    "jupyter>=1.0.0",
    "mypy",
    "pytest-cov",
    "pytest-forked",
    "pytest-xdist",
    "pytest",
    "types-pytz",
    "types-pyyaml>=6.0.12.3",
    "types-tensorflow>=2.11.0.2",
]

[tool.pytest.ini_options]
cache_dir = "/home/ubuntu/.pytest_cache"
filterwarnings = [
    "ignore:The --rsyncdir command line argument",
    "ignore:.*jupyter.*platformdirs.*:",
    "ignore:.*np.bool8.*is a deprecated.*:",
    "ignore:.*Call to deprecated function.*:",
]
markers = [
    "flaky:Flaky test",
]

[tool.coverage.report]
show_missing = true
omit = [
    "*/__init__.py",
    "*/*_test_base.py",
    "*/*_test.py",
    "*/*_tests.py",
    "*/cli.py",
    "*/command.py",
    "*/mock_*.py",
    "*/conftest.py",
]

[tool.mypy]
cache_dir = "/home/ubuntu/.mypy_cache"
python_version = "3.10"
ignore_missing_imports = true
warn_no_return = false
pretty = true
warn_unused_ignores = true

[build-system]
requires = [
    "pdm-pep517>=1.0.0",
]
build-backend = "pdm.pep517.api"
